--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,8 @@
   margin-left: 20px;
   margin-bottom: 5px;
   cursor: pointer;
+  text-decoration: underline;
+  color: #d37684;
 }
 
 .mode {
@@ -81,14 +83,14 @@
 
 button {
   font-family: 'Orbitron', sans-serif;
-  font-size: 5vmin;
+  font-size: calc(10px + 4vmin);
   background-color: #89c3eb;
   border: none;
   cursor: pointer;
   border-radius: 10px;
   margin-top: 20px;
   width: 100%;
-  height: 7vw;
+  height: calc(10px + 7vmin);
   padding: 5px 0;
 }
 
