--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 
 .title {
   font-family: 'Orbitron', sans-serif;
-  font-size: 7vmin;
+  font-size: calc(30px + 3vmin);
   margin-top: 70px;
   color: #00a381;
 }
@@ -70,7 +70,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 30vw;
+  height: 40vw;
   width: 20vw;
   border: 3px solid #89c3eb;
   padding: 5px 0.5em;
@@ -78,7 +78,7 @@
 }
 
 .symbol {
-  font-size: 7vmin;
+  font-size: calc(30px + 5vmin);
 }
 
 button {
@@ -132,7 +132,7 @@ button:hover {
 
 .totalAndSpinCount {
   font-family: 'Orbitron', sans-serif;
-  font-size: 4vmin;
+  font-size: calc(15px + 2vmin);
   color: #deb068;
   margin-right: 10px;
 }
@@ -170,4 +170,45 @@ button:hover {
 .changeItem ul li {
   margin-bottom: 5px;
   color: #deb068;
+}
+
+@media (min-width: 1024px) {
+  .reelContainer {
+    justify-content: center;
+  }
+  
+  .reel {
+    height: 30vw;
+    width: 15vw;
+  }
+  
+  .header {
+    max-width: 1024px;
+    margin: 0 auto;
+  }
+  
+  .title {
+    font-size: calc(30px + 4vmin);
+  }
+  
+  .symbol {
+    font-size: calc(30px + 6vmin);
+  }
+  
+  .button {
+    font-size: calc(10px + 3vmin);
+    height: calc(10px + 5vmin);
+  }
+  
+  .lamp {
+    font-size: 5vmin;
+  }
+  
+  .newMedals {
+    font-size: 4vmin;
+  }
+  
+  .totalAndSpinCount {
+    font-size: calc(20px + 3vmin);
+  }
 }
